@@ -1303,7 +1303,7 @@ decorInitWindow (CompPlugin *p,
     if (!w->attrib.override_redirect)
 	decorWindowUpdateDecoration (w);
 
-    if (w->attrib.map_state == IsViewable)
+    if (w->shaded || w->attrib.map_state == IsViewable)
 	decorWindowUpdate (w, FALSE);
 
     return TRUE;
